[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/carnevalee_freakshow-50.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/carnevalee_freakshow-30.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/GamingTable.gd" type="Script" id=3]
[ext_resource path="res://PlayerCard.tscn" type="PackedScene" id=4]

[node name="GamingTable" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.847059, 0.67451, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 240.0
margin_right = -180.0
margin_bottom = -240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 360 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 360.0
margin_top = 151.0
margin_right = 360.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 720.0
margin_bottom = 1084.0
rect_min_size = Vector2( 0, 720 )
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 2

[node name="PlayerCard1" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 220.0

[node name="PlayerCard2" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 380.0
margin_right = 720.0
margin_bottom = 220.0

[node name="PlayerCard3" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 260.0
margin_right = 340.0
margin_bottom = 480.0

[node name="PlayerCard4" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 380.0
margin_top = 260.0
margin_right = 720.0
margin_bottom = 480.0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 1088.0
margin_right = 720.0
margin_bottom = 1448.0
rect_min_size = Vector2( 0, 360 )

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 110.0
margin_top = 130.0
margin_right = 610.0
margin_bottom = 230.0
rect_min_size = Vector2( 500, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Next phase"

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 150 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.5
margin_top = -17.5
margin_right = 118.5
margin_bottom = 17.5
custom_fonts/font = ExtResource( 2 )
text = "Waiting other player"
align = 1
valign = 1

[node name="BossDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 150 )
window_title = "Hey boss!"

[node name="Label2" type="Label" parent="BossDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -67.0
margin_right = 192.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "You are now the convoy boss!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TradeDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 250 )
popup_exclusive = true
window_title = "Choose how much you want to bet"

[node name="Label2" type="Label" parent="TradeDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "choose the amount of gold to
give for wheel reapair"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="TradeDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -117.0
margin_right = 192.0
margin_bottom = 89.0
align = 1
